# csv-ingest

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml
examples/: stream_minimal.rs
src/: codec.rs  fast.rs  io.rs  lib.rs
tests/: ingest_smoke.rs
